--- a/src/index.html
+++ b/src/index.html
@@ -27,13 +27,13 @@
           <h2 class="navigation__logo logo">Bhromaon</h2>
           <ul class="navigation__list">
             <li class="navigation__item">
-              <a class="navigation__link" href="#">Who We Are</a>
+              <a class="navigation__link" href="#choose">Who We Are</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link" href="#">What We Do</a>
+              <a class="navigation__link" href="#whatdo">What We Do</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link" href="#">Travel With Us</a>
+              <a class="navigation__link" href="#whatdo">Travel With Us</a>
             </li>
             <li class="navigation__item">
               <a class="navigation__link" href="#">Contact Us</a>
@@ -43,7 +43,7 @@
       </nav>
     </header>
 
-    <section class="section-choose">
+    <section id="choose" class="section-choose">
       <div class="container section-choose__container">
         <div class="section-choose__content-box">
           <h2 class="section-choose__title">Why Choose Us</h2>
@@ -68,7 +68,7 @@
       </div>
     </section>
 
-    <section class="section-what-do">
+    <section id="whatdo" class="section-what-do">
       <div class="container section-what-do__container">
           <ul class="section-what-do__list">
           <li class="section-what-do__item">
@@ -98,7 +98,7 @@
       </div>
     </section>
 
-    <section class="section-travel">
+    <section id="travel" class="section-travel">
       <div class="container section-travel__container">
         <div class="section-travel__travel-card travel-card">
           <h4 class="travel-card__country">Spain</h4>
@@ -123,6 +123,37 @@
         </div>
       </div>
     </section>
+
+    <section >
+      <div class="container">
+        <h2>What Our Tourist Say</h2>
+        <div>
+          <div>
+            <img src="" alt="">
+          </div>
+          <div>
+            <h3>Sam Sumon</h3>
+            <p>
+               But I must explain to you how all this mistaken idea of account to denouncinpleasure and praising pain But I must explain to you how all this mistaken idea of account to nai denouncing pleasure and praising pain was account born and I account will give you a complete account of the system was account born and I account will give you a nai the complete account of the system
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <h2></h2>
+      <h3></h3>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </footer>
+
+
 
     
 
