--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,10 @@
       //= templates/section-choose.html
       //= templates/section-whatdo.html
       //= templates/section-travel.html
-      //= templates/section-travel-next.html
       //= templates/section-tourist.html
     </main>
     //= templates/footer.html
+
+    <script src="js/main.js"></script>
   </body>
 </html>
